managed to get the Latin text (from Perseus) displayed when the user clicks on a cell of the heatmap

--- a/ipynb/GatherData4Viz.ipynb
+++ b/ipynb/GatherData4Viz.ipynb
@@ -1179,37 +1179,88 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Get the Latin text of the Aeneid from Perseus (via CTS API) "
+    "## Get the Latin text of the Aeneid from Perseus"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "http://cts.perseids.org/api/cts/?request=GetPassagePlus&urn=urn:cts:latinLit:phi0690.phi003:1.1"
+    "http://cts.perseids.org/api/cts/?request=GetPassagePlus&urn=urn:cts:latinLit:phi0690.phi003:1.1\n",
+    "\n",
+    "\n",
+    "or simply download this https://github.com/PerseusDL/canonical-latinLit/blob/master/data/phi0690/phi003/phi0690.phi003.perseus-lat2.xml\n",
+    "\n",
+    "and parse it with BeautifoulSoup..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import urllib2\n",
+    "import bs4\n",
+    "from bs4 import BeautifulSoup"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "No module named MyCapytain",
+     "ename": "FeatureNotFound",
+     "evalue": "Couldn't find a tree builder with the features you requested: xml. Do you need to install a parser library?",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-be072cf8e194>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mMyCapytain\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m: No module named MyCapytain"
+      "\u001b[0;31mFeatureNotFound\u001b[0m                           Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-bdb70d18a35d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mperseus_aeneid_latin\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"https://raw.githubusercontent.com/PerseusDL/canonical-latinLit/master/data/phi0690/phi003/phi0690.phi003.perseus-lat2.xml\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0msoup\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mBeautifulSoup\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0murllib2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0murlopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mperseus_aeneid_latin\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"xml\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mdivs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msoup\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind_all\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"div\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msubtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"book\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"textpart\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/rromanello/.pyenv/versions/phd-py2/lib/python2.7/site-packages/bs4/__init__.pyc\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, markup, features, builder, parse_only, from_encoding, exclude_encodings, **kwargs)\u001b[0m\n\u001b[1;32m    163\u001b[0m                     \u001b[0;34m\"Couldn't find a tree builder with the features you \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    164\u001b[0m                     \u001b[0;34m\"requested: %s. Do you need to install a parser library?\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 165\u001b[0;31m                     % \",\".join(features))\n\u001b[0m\u001b[1;32m    166\u001b[0m             \u001b[0mbuilder\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbuilder_class\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    167\u001b[0m             if not (original_features == builder.NAME or\n",
+      "\u001b[0;31mFeatureNotFound\u001b[0m: Couldn't find a tree builder with the features you requested: xml. Do you need to install a parser library?"
      ]
     }
    ],
    "source": [
-    "import MyCapytain"
+    "perseus_aeneid_latin = \"https://raw.githubusercontent.com/PerseusDL/canonical-latinLit/master/data/phi0690/phi003/phi0690.phi003.perseus-lat2.xml\"\n",
+    "soup = BeautifulSoup(urllib2.urlopen(perseus_aeneid_latin).read(),\"xml\")\n",
+    "divs = soup.find_all(\"div\",subtype=\"book\",type=\"textpart\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def create_chunks(l, n):\n",
+    "    \"\"\"Yield successive n-sized chunks from l.\"\"\"\n",
+    "    for i in xrange(0, len(l), n):\n",
+    "        yield l[i:i+n]\n",
+    "\n",
+    "chunks = {(bin[0],bin[-1]):bin for bin in list(create_chunks(range(1,1001),50))}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def find_chunk(line_number, chunks):\n",
+    "    for start_line, end_line in chunks:\n",
+    "        if(line_number >= start_line and line_number <= end_line):\n",
+    "            return start_line,end_line"
    ]
   },
   {
@@ -1219,7 +1270,63 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "text = {}\n",
+    "for div in divs:\n",
+    "    text[div[\"n\"]] = {\"%i-%i\"%(start_line,end_line):[] for start_line, end_line in chunks}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for div in divs:\n",
+    "    lines = div.find_all(\"l\")\n",
+    "    for line in lines:\n",
+    "        if(not line[\"n\"]==\"62b\"):\n",
+    "            text[div[\"n\"]][\"%i-%i\"%(find_chunk(int(line[\"n\"]),chunks))].append({\"line\":\"%s.%s\"%(div[\"n\"],line[\"n\"]),\"text\":line.text})\n",
+    "        else:\n",
+    "            prev_line = text[div[\"n\"]][\"%i-%i\"%(find_chunk(int(line[\"n\"][:-1]),chunks))].pop()\n",
+    "            prev_line[\"text\"] = \"%s %s\"%(prev_line[\"text\"],line.text)\n",
+    "            text[div[\"n\"]][\"%i-%i\"%(find_chunk(int(line[\"n\"][:-1]),chunks))].append(prev_line)§"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "output = []\n",
+    "for book_n in text.keys():\n",
+    "    for chunk in text[book_n].keys():\n",
+    "        temp = {\n",
+    "        \"book\": book_n\n",
+    "        ,\"chunk\" : chunk\n",
+    "        ,\"lines\" : text[book_n][chunk]\n",
+    "    }\n",
+    "        output.append(temp)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "outf = codecs.open(\"/media/romanell_files/tmp/aeneid.json\",\"w\",\"utf-8\")\n",
+    "json.dump(output,outf,encoding=\"utf-8\")\n",
+    "outf.close()"
+   ]
   }
  ],
  "metadata": {
