committing local changes

--- a/ipynb/GatherData4Viz.ipynb
+++ b/ipynb/GatherData4Viz.ipynb
@@ -34,11 +34,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/rromanello/.pyenv/versions/phd-py2/lib/python2.7/site-packages/matplotlib/__init__.py:1350: UserWarning:  This call to matplotlib.use() has no effect\n",
+      "because the backend has already been chosen;\n",
+      "matplotlib.use() must be called *before* pylab, matplotlib.pyplot,\n",
+      "or matplotlib.backends is imported for the first time.\n",
+      "\n",
+      "  warnings.warn(_use_error_msg)\n"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib; matplotlib.use('Agg')\n",
     "%matplotlib inline\n",
@@ -51,12 +64,12 @@
     "import requests\n",
     "import seaborn as sns;sns.set()\n",
     "import codecs\n",
-    "from MyCapytain.common.reference import URN"
+    "#from MyCapytain.common.reference import URN"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -252,9 +265,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 28,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -263,9 +276,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -274,18 +287,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "quoted_urns = [urn for doc in data[\"docs\"] for urn in doc[\"chunk_urns\"]]"
+    "#data[\"docs\"][2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# TODO: do the marshalling of the JSON at the same time\n",
+    "quotations = {doc[\"id\"]:doc for doc in data[\"docs\"]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#quotations['8cddbfcf6e0b36371b2d1dfaec50d260']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "quoted_urns = [(urn,doc[\"id\"]) for doc in data[\"docs\"] for urn in doc[\"chunk_urns\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -296,7 +343,7 @@
        "29941"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +354,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(u'urn:cts:latinLit:phi0690.phi003:1.48',\n",
+       "  u'000395a29c586c8ca10e4bbade544dde')]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "quoted_urns[:1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -337,89 +407,89 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1-50</th>\n",
-       "      <td>{u'quotations': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...</td>\n",
-       "      <td>{u'quotations': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...</td>\n",
-       "      <td>{u'quotations': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...</td>\n",
-       "      <td>{u'quotations': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...</td>\n",
-       "      <td>{u'quotations': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...</td>\n",
-       "      <td>{u'quotations': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...</td>\n",
-       "      <td>{u'quotations': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...</td>\n",
-       "      <td>{u'quotations': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...</td>\n",
-       "      <td>{u'quotations': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...</td>\n",
-       "      <td>{u'quotations': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...</td>\n",
-       "      <td>{u'quotations': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...</td>\n",
-       "      <td>{u'quotations': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...</td>\n",
+       "      <td>{u'quotations': [], u'references': []}</td>\n",
+       "      <td>{u'quotations': [], u'references': []}</td>\n",
+       "      <td>{u'quotations': [], u'references': []}</td>\n",
+       "      <td>{u'quotations': [], u'references': []}</td>\n",
+       "      <td>{u'quotations': [], u'references': []}</td>\n",
+       "      <td>{u'quotations': [], u'references': []}</td>\n",
+       "      <td>{u'quotations': [], u'references': []}</td>\n",
+       "      <td>{u'quotations': [], u'references': []}</td>\n",
+       "      <td>{u'quotations': [], u'references': []}</td>\n",
+       "      <td>{u'quotations': [], u'references': []}</td>\n",
+       "      <td>{u'quotations': [], u'references': []}</td>\n",
+       "      <td>{u'quotations': [], u'references': []}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>51-100</th>\n",
-       "      <td>{u'quotations': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...</td>\n",
-       "      <td>{u'quotations': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...</td>\n",
-       "      <td>{u'quotations': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...</td>\n",
-       "      <td>{u'quotations': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...</td>\n",
-       "      <td>{u'quotations': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...</td>\n",
-       "      <td>{u'quotations': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...</td>\n",
-       "      <td>{u'quotations': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...</td>\n",
-       "      <td>{u'quotations': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...</td>\n",
-       "      <td>{u'quotations': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...</td>\n",
-       "      <td>{u'quotations': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...</td>\n",
-       "      <td>{u'quotations': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...</td>\n",
-       "      <td>{u'quotations': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...</td>\n",
+       "      <td>{u'quotations': [], u'references': []}</td>\n",
+       "      <td>{u'quotations': [], u'references': []}</td>\n",
+       "      <td>{u'quotations': [], u'references': []}</td>\n",
+       "      <td>{u'quotations': [], u'references': []}</td>\n",
+       "      <td>{u'quotations': [], u'references': []}</td>\n",
+       "      <td>{u'quotations': [], u'references': []}</td>\n",
+       "      <td>{u'quotations': [], u'references': []}</td>\n",
+       "      <td>{u'quotations': [], u'references': []}</td>\n",
+       "      <td>{u'quotations': [], u'references': []}</td>\n",
+       "      <td>{u'quotations': [], u'references': []}</td>\n",
+       "      <td>{u'quotations': [], u'references': []}</td>\n",
+       "      <td>{u'quotations': [], u'references': []}</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                       1   \\\n",
-       "1-50    {u'quotations': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...   \n",
-       "51-100  {u'quotations': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...   \n",
+       "                                            1   \\\n",
+       "1-50    {u'quotations': [], u'references': []}   \n",
+       "51-100  {u'quotations': [], u'references': []}   \n",
        "\n",
-       "                                                       2   \\\n",
-       "1-50    {u'quotations': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...   \n",
-       "51-100  {u'quotations': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...   \n",
+       "                                            2   \\\n",
+       "1-50    {u'quotations': [], u'references': []}   \n",
+       "51-100  {u'quotations': [], u'references': []}   \n",
        "\n",
-       "                                                       3   \\\n",
-       "1-50    {u'quotations': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...   \n",
-       "51-100  {u'quotations': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...   \n",
+       "                                            3   \\\n",
+       "1-50    {u'quotations': [], u'references': []}   \n",
+       "51-100  {u'quotations': [], u'references': []}   \n",
        "\n",
-       "                                                       4   \\\n",
-       "1-50    {u'quotations': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...   \n",
-       "51-100  {u'quotations': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...   \n",
+       "                                            4   \\\n",
+       "1-50    {u'quotations': [], u'references': []}   \n",
+       "51-100  {u'quotations': [], u'references': []}   \n",
        "\n",
-       "                                                       5   \\\n",
-       "1-50    {u'quotations': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...   \n",
-       "51-100  {u'quotations': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...   \n",
+       "                                            5   \\\n",
+       "1-50    {u'quotations': [], u'references': []}   \n",
+       "51-100  {u'quotations': [], u'references': []}   \n",
        "\n",
-       "                                                       6   \\\n",
-       "1-50    {u'quotations': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...   \n",
-       "51-100  {u'quotations': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...   \n",
+       "                                            6   \\\n",
+       "1-50    {u'quotations': [], u'references': []}   \n",
+       "51-100  {u'quotations': [], u'references': []}   \n",
        "\n",
-       "                                                       7   \\\n",
-       "1-50    {u'quotations': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...   \n",
-       "51-100  {u'quotations': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...   \n",
+       "                                            7   \\\n",
+       "1-50    {u'quotations': [], u'references': []}   \n",
+       "51-100  {u'quotations': [], u'references': []}   \n",
        "\n",
-       "                                                       8   \\\n",
-       "1-50    {u'quotations': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...   \n",
-       "51-100  {u'quotations': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...   \n",
+       "                                            8   \\\n",
+       "1-50    {u'quotations': [], u'references': []}   \n",
+       "51-100  {u'quotations': [], u'references': []}   \n",
        "\n",
-       "                                                       9   \\\n",
-       "1-50    {u'quotations': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...   \n",
-       "51-100  {u'quotations': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...   \n",
+       "                                            9   \\\n",
+       "1-50    {u'quotations': [], u'references': []}   \n",
+       "51-100  {u'quotations': [], u'references': []}   \n",
        "\n",
-       "                                                       10  \\\n",
-       "1-50    {u'quotations': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...   \n",
-       "51-100  {u'quotations': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...   \n",
+       "                                            10  \\\n",
+       "1-50    {u'quotations': [], u'references': []}   \n",
+       "51-100  {u'quotations': [], u'references': []}   \n",
        "\n",
-       "                                                       11  \\\n",
-       "1-50    {u'quotations': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...   \n",
-       "51-100  {u'quotations': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...   \n",
+       "                                            11  \\\n",
+       "1-50    {u'quotations': [], u'references': []}   \n",
+       "51-100  {u'quotations': [], u'references': []}   \n",
        "\n",
-       "                                                       12  \n",
-       "1-50    {u'quotations': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...  \n",
-       "51-100  {u'quotations': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...  "
+       "                                            12  \n",
+       "1-50    {u'quotations': [], u'references': []}  \n",
+       "51-100  {u'quotations': [], u'references': []}  "
       ]
      },
-     "execution_count": 87,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,14 +499,36 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "for urn in quoted_urns:\n",
+    "TODO:\n",
+    "\n",
+    "- the current way of counting quotations favours those spanning over multiple lines\n",
+    "- for each quoted chunk, keep a list of quotation_IDs and then do a distinct over them"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'URN' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-35-7e50f26cd79e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0murn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mquotation_id\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mquoted_urns\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mquoted_urn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mURN\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0murn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0mbook_n\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mline_n\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mquoted_urn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreference\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mbook_n\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbook_n\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mline_n\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline_n\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'URN' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "for urn, quotation_id in quoted_urns:\n",
     "    quoted_urn = URN(urn)\n",
     "    book_n, line_n = quoted_urn.reference.list\n",
     "    book_n = int(book_n)\n",
