in app/heatmap.html: the middle and right columns are now scrollable.

--- a/ipynb/GatherData4Viz.ipynb
+++ b/ipynb/GatherData4Viz.ipynb
@@ -256,6 +256,24 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Query the CitedLoci API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#TODO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
